fix: general spacing on subs index and grants detail

--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -268,8 +268,6 @@ td {
 
 .back-arrow {
   margin: 0;
-  padding: 1px !important;
-  padding-bottom: 11px !important;
   box-sizing: border-box;
 }
 
